@@ -1,7 +1,7 @@
 /*
  * disk.h - disk routines
  *
- * Copyright (c) 2001-2012 EmuTOS development team
+ * Copyright (c) 2001-2013 EmuTOS development team
  *
  * Authors:
  *  PES   Petr Stehlik
@@ -23,5 +23,6 @@ extern LONG DMAwrite(LONG sector, WORD count, LONG buf, WORD dev);
 /* partition detection */
 
 void disk_init(void);
+void byteswap(UBYTE *buffer, ULONG size);
 
 #endif /* DISK_H */
