@@ -4268,3 +4268,5 @@ Start... early ages
 2013-01-21
 - cli/command.c: Minor improvements to displayed text strings. (RFB)
 - cli/command.c: Fix MV command to move rather than copy. (RFB)
+- bios/disk.c bios/disk.h bios/ide.c: Add support for not-byteswapped
+  disk partitions. (RFB)
